rename health check endpoint etc
